CHANGE HISTORY
--------------------------------

1.1.0   10/31/09

Added the ability to cache LOOP data. This can dramatically reduce the
number of writes to the stats database, reducing wear on solid-state
disk stores.

Refactored module weewx.wunderground so it more closely resembles the
(better) logic in wunderfixer.


1.0.0   10/26/09

Took the module weewx.factory back out, as it was too complicated and
hard to understand.

Added support for generating NOAA monthly and yearly
reports. Completely rewrote the genfiles.py module, to allow easy
subclassing and specialization.

Completely rewrote the stats.py module. All aggregate quantities
are now calculated dynamically.

Labels for HTML generation are now held separately from labels used
for image generation. This allows entities such as '&deg;' to be used
for the former.

LOOP mode now requests only 200 LOOP records (instead of the old
2000). It then renews the request should it run out. This was to get
around an (undocumented) limitation in the VP2 that limits the number
of LOOP records that can be requested to something like 220. This was
a problem when supporting VP2s that use long archive intervals.

Cut down the amount of computing that went on before the processing
thread was spawned, thus allowing the main thread to get back into
LOOP mode more quickly.

Added type 'rainRate' to the types decoded from a Davis archive
record. For some reason it was left out.

Added retries when doing FTP uploads. It will now attempt the upload
several times before giving up.

Much more extensive DEBUG analysis.

Nipped and tucked here and there, trying to simplify.


0.6.5  10/11/09

Ported to Cheetah V2.2.X. Mostly, this is making sure that all strings that
cannot be converted with the 'ascii' codec are converted to Unicode first
before feeding to Cheetah.

0.6.4   9/22/09

Fixed an error in the calculation of heat index.

0.6.3   8/25/09

FTP transfers now default to ACTIVE mode, but a configuration file option allows